--- a/frontend_flutter/pubspec.yaml
+++ b/frontend_flutter/pubspec.yaml
@@ -30,6 +30,10 @@ environment:
 dependencies:
   http: ^0.13.4
   url_launcher: ^6.0.9
+
+  google_maps_flutter: ^2.2.3
+  geocoding: ^2.0.0
+  
   flutter:
     sdk: flutter
 
